wwwphp/wwwphp-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wwwphp
  name: wwwphp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wwwphp
  template:
    metadata:
      labels:
        app: wwwphp
    spec:
      containers:
      - image: nginx:1.28
        name: nginx
        volumeMounts:
          - name: site
            mountPath: /usr/share/nginx/html
          - name: nginx
            mountPath: /etc/nginx/conf.d/
      - image: php:8.2-fpm
        name: php
        volumeMounts:
          - name: site
            mountPath: /var/www/html

      volumes:
        - name: site
          hostPath:
            path: /home/stagiaire/data
            type: Directory
        - name: nginx
          configMap:
            name: nginx-conf

      nodeName: k8s-wk2
